{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 12,
  "lineage": "975035d5-20c3-79f9-e4e6-d785dbbf1f10",
  "resources": [
    {
      "module": "module.webserver_cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_info",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:770115561474:vpc/vpc-07b95aa6328629beb",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fa0bccfd693a9b69",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-04bf85cf5f90409af",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b95aa6328629beb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01e53b75445ea7597",
            "owner_id": "770115561474"
          }
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:770115561474:loadbalancer/app/terraform-app-lb/a261188e2ab5cc7a",
            "arn_suffix": "app/terraform-app-lb/a261188e2ab5cc7a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-app-lb-1577232967.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:770115561474:loadbalancer/app/terraform-app-lb/a261188e2ab5cc7a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05f685c75aa7ac8ca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01891715c06df4c62"
              },
              {
                "subnet_id": "subnet-0405ad5315d2344dc"
              },
              {
                "subnet_id": "subnet-0852ac24e6f7f5da7"
              }
            ],
            "subnets": [
              "subnet-01891715c06df4c62",
              "subnet-0405ad5315d2344dc",
              "subnet-0852ac24e6f7f5da7"
            ],
            "vpc_id": "vpc-07b95aa6328629beb",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.webserver_cluster.aws_security_group.sec_group_alb",
            "module.webserver_cluster.data.aws_subnets.subnets_info"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:770115561474:listener/app/terraform-app-lb/a261188e2ab5cc7a/b774c775edffb99e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:770115561474:listener/app/terraform-app-lb/a261188e2ab5cc7a/b774c775edffb99e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:770115561474:loadbalancer/app/terraform-app-lb/a261188e2ab5cc7a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_lb.app_lb",
            "module.webserver_cluster.aws_security_group.sec_group_alb",
            "module.webserver_cluster.data.aws_subnets.subnets_info"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:770115561474:targetgroup/terraform-target-grp/ea913666d2853c29",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:770115561474:listener-rule/app/terraform-app-lb/a261188e2ab5cc7a/b774c775edffb99e/f789a9f6aa8658dd",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:770115561474:listener-rule/app/terraform-app-lb/a261188e2ab5cc7a/b774c775edffb99e/f789a9f6aa8658dd",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:770115561474:listener/app/terraform-app-lb/a261188e2ab5cc7a/b774c775edffb99e",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_lb.app_lb",
            "module.webserver_cluster.aws_lb_listener.http_listener",
            "module.webserver_cluster.aws_lb_target_group.target_grp",
            "module.webserver_cluster.aws_security_group.sec_group_alb",
            "module.webserver_cluster.data.aws_subnets.subnets_info",
            "module.webserver_cluster.data.aws_vpc.vpc_info"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:770115561474:targetgroup/terraform-target-grp/ea913666d2853c29",
            "arn_suffix": "targetgroup/terraform-target-grp/ea913666d2853c29",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:770115561474:targetgroup/terraform-target-grp/ea913666d2853c29",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-target-grp",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07b95aa6328629beb"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.vpc_info"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:770115561474:security-group/sg-0eb595eaf2c618df9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0eb595eaf2c618df9",
            "ingress": [],
            "name": "webservers-stage_instance",
            "name_prefix": "",
            "owner_id": "770115561474",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07b95aa6328629beb"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_group_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:770115561474:security-group/sg-05f685c75aa7ac8ca",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05f685c75aa7ac8ca",
            "ingress": [],
            "name": "webservers-stage_alb",
            "name_prefix": "",
            "owner_id": "770115561474",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07b95aa6328629beb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3191114728",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05f685c75aa7ac8ca",
            "security_group_rule_id": "sgr-040f5aa2b352b926e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.sec_group_alb"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-301676329",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05f685c75aa7ac8ca",
            "security_group_rule_id": "sgr-0e4650853296a5ef0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.sec_group_alb"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1190002554",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eb595eaf2c618df9",
            "security_group_rule_id": "sgr-082d0bc6b9ef182a1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.ec2_instance_sg"
          ]
        }
      ]
    }
  ]
}